RESOLVED FIXED25259
AX: VoiceOver cmd-cntl-space does not follow the google.com->more link
https://bugs.webkit.org/show_bug.cgi?id=25259
Summary AX: VoiceOver cmd-cntl-space does not follow the google.com->more link
chris fleizach
Reported 2009-04-16 18:30:33 PDT
The more link in google.com does not change the AXChildren and show the now visible links
Attachments
patch to fix accessibility problem with invisible elements (4.69 KB, patch)
2009-04-16 19:31 PDT, chris fleizach
darin: review+
chris fleizach
Comment 1 2009-04-16 19:31:45 PDT
Created attachment 29569 [details] patch to fix accessibility problem with invisible elements
Darin Adler
Comment 2 2009-04-17 05:17:12 PDT
Comment on attachment 29569 [details] patch to fix accessibility problem with invisible elements > + bool visibilityChanged = (m_style->visibility() != newStyle->visibility() || > + m_style->zIndex() != newStyle->zIndex() || > + m_style->hasAutoZIndex() != newStyle->hasAutoZIndex()); The formatting here retains strange indenting and parentheses from the if statement. I would use this format: bool visibilityChanged = m_style->visibility() != newStyle->visibility() || m_style->zIndex() != newStyle->zIndex() || m_style->hasAutoZIndex() != newStyle->hasAutoZIndex(); Partly this is because I prefer the "operators at beginning of line" style because I think it makes it clearer that subsequent lines are continuations of the expression. And partly because I think the entire expression is easier to read if we don't do excessive indentation. r=me
chris fleizach
Comment 3 2009-04-17 09:00:36 PDT
Note You need to log in before you can comment on or make changes to this bug.