Bug 25259: AX: VoiceOver cmd-cntl-space does not follow the google.com->more link https://bugs.webkit.org/show_bug.cgi?id=25259

When a node becomes visible or hidden, accessibility needs to be told to update.



Canonical link: https://commits.webkit.org/34663@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42611 268f45cc-cd09-0410-ab3c-d52691b4dbfc